--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -2,11 +2,15 @@
   <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
   <button class="search-form_btn" type="submit">Search</button>
 </form>
-
-<ul class="gallery">
-  <!-- Список <li> с карточками изображений -->
-</ul>
-
+<div id="gallery-container">
+  <ul class="gallery">
+    <!-- Список <li> с карточками изображений -->
+  </ul>
+</div>
+<button type="button" class="button" data-action="load-more">
+  <span></span>
+  <span class="label">Load more</span>
+</button>
 <!-- 
 <button type="button" class="btn btn-primary button" data-action="load-more">
   <span
