--- a/src/templates/markup.hbs
+++ b/src/templates/markup.hbs
@@ -1,8 +1,9 @@
 {{#each this}}
 <li>
 <div class="photo-card">
+    <div class='photo-card__thumb'>
     <img src="{{webformatURL}}" alt="{{tags}}" />
-
+</div>
     <div class="stats">
         <p class="stats-item">
             <i class="material-icons">thumb_up</i>
