--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -25,7 +25,10 @@ ul {
   display: flex;
   flex-wrap: wrap;
 }
-
+.modal_img {
+  width: auto;
+  height: auto;
+}
 .photo-card {
   margin: 20px;
 }
