--- a/src/templates/markup.hbs
+++ b/src/templates/markup.hbs
@@ -2,7 +2,7 @@
 <li>
 <div class="photo-card">
     <div class='photo-card__thumb'>
-    <img src="{{webformatURL}}" alt="{{tags}}" />
+    <img src="{{webformatURL}}" data-source="{{largeImageURL}}" alt="{{tags}}" />
 </div>
     <div class="stats">
         <p class="stats-item">
