--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -1,13 +1,13 @@
 <form class="search-form" id="search-form">
   <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
-  <button class="search-form_btn" type="submit">Search</button>
+  <button class="search-form_btn button {" type="submit">Search</button>
 </form>
 <div id="gallery-container">
   <ul class="gallery">
     <!-- Список <li> с карточками изображений -->
   </ul>
 </div>
-<button type="button" class="button" data-action="load-more">
+<button type="button" class="button btn" data-action="load-more">
   <span></span>
   <span class="label">Load more</span>
 </button>
