--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -28,6 +28,11 @@ ul {
   padding-right: 15px;
   background-color: rgba(125, 185, 235, 0.849);
 }
+
+.gallery-container {
+  margin: 20px;
+}
+
 .gallery {
   display: flex;
   flex-wrap: wrap;
@@ -37,20 +42,6 @@ ul {
   margin-left: -20px;
 }
 
-.gallery-item {
-  // flex-grow: 1;
-  margin-top: 20px;
-  margin-left: 20px;
-  flex-basis: calc(100% / 3 - 20px);
-  padding: 0;
-}
-
-// .photo-card {
-//   flex-grow: 1;
-// }
-.photo-card__thumb {
-  flex-grow: 1;
-}
 .photo-card_image {
   flex-grow: 1;
 }
@@ -60,13 +51,23 @@ ul {
   width: 80%;
   height: auto;
 }
+
 .photo-card {
-  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 20px;
+  flex-basis: calc(100% / 3 - 20px);
+  padding: 0;
+
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 1px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
   border-radius: 4px;
   overflow: hidden;
+  flex-grow: 1;
 }
+
 .search-form {
   display: flex;
   justify-content: center;
@@ -76,7 +77,7 @@ ul {
 
 .button {
   display: block;
-
+  margin-left: 20px;
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 5px;
@@ -95,53 +96,21 @@ ul {
   margin-left: auto;
   margin-right: auto;
 }
+
 .stats {
   display: flex;
   justify-content: space-between;
   padding: 10px;
   background-color: aliceblue;
-  // flex-grow: 1;
 }
+
 .stats-item {
   font-size: 12px;
   display: flex;
   align-items: center;
 }
+
 .material-icons {
   padding-right: 10px;
   color: rgb(3, 36, 126);
-}
-// .button > .spinner.is-hidden {
-//   display: none;
-// }
-
-/* Article List */
-.articles {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 20px;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  max-width: calc(100vw - 80px);
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 30px;
-}
-
-.articles li {
-  height: 450px;
-  overflow: hidden;
-}
-
-.articles img {
-  display: block;
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-}
-
-.articles a {
-  text-decoration: none;
-  color: #2a2a2a;
 }
