--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -1,5 +1,5 @@
 <form class="search-form" id="search-form">
-  <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
+  <input type="text" name="query" autocomplete="off" placeholder="Search images..." required />
   <button class="search-form_btn button {" type="submit">Search</button>
 </form>
 <div id="gallery-container">
